--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>strict-select</title>
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_947993_nuhu14oolu.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_947993_2cvw5ennpfi.css">
     <link rel="stylesheet" href="/static/css/reset.css">
   </head>
   <body>
@@ -22,5 +22,11 @@
     if(!window.Promise) {
       document.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"'+'>'+'<'+'/'+'script>');
     }
+    //rem适配
+    (function (designWidth) {
+      var size = (window.innerWidth || document.documentElement.clientWidth) / designWidth * 100;
+      document.documentElement.style.fontSize = size + "px";
+      document.body.style.fontSize = "14px";
+    })(750);
   </script>
 </html>
